change links script

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3011
-MONGO_URI=mongodb+srv://adilansari35830:Hngq0b5H7wjL6cFj@cluster0.gw9fegn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://adilansari35830:Hngq0b5H7wjL6cFj@cluster0.gw9fegn.mongodb.net/needit?retryWrites=true&w=majority
+FRONTEND_URL=https://needit-frontend.vercel.app
+JWT_SECRET=Adil(00)$23
