--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3011
-MONGO_URI=mongodb+srv://adilansari35830:Hngq0b5H7wjL6cFj@cluster0.gw9fegn.mongodb.net/needit?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://adilansari35830:Adil(00)$123@needit.3ketkjn.mongodb.net/needit?retryWrites=true&w=majority&appName=Needit
 FRONTEND_URL=https://needit-frontend.vercel.app
 JWT_SECRET=Adil(00)$23
